--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>spring-di</module>
         <module>spring-jpa</module>
+        <module>spring-event</module>
     </modules>
     <packaging>pom</packaging>
 
