--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>spring-di</module>
         <module>spring-jpa</module>
         <module>spring-event</module>
+        <module>spring-validator</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -26,7 +27,7 @@
     <properties>
         <servlet.api.version>3.1.0</servlet.api.version>
         <jstl.version>1.2</jstl.version>
-        <spring.version>4.0.7.RELEASE</spring.version>
+        <spring.version>4.1.3.RELEASE</spring.version>
         <slf4j.version>1.7.5</slf4j.version>
         <jackson.version>2.3.3</jackson.version>
         <junit.version>4.11</junit.version>
@@ -35,7 +36,7 @@
     </properties>
 
     <dependencies>
-        <!-- Servlet -->
+        <!-- Servlet
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
@@ -48,11 +49,18 @@
             <artifactId>jstl</artifactId>
             <version>${jstl.version}</version>
         </dependency>
+        -->
 
         <!-- Log -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
             <version>${slf4j.version}</version>
         </dependency>
 
