--- a/pom.xml
+++ b/pom.xml
@@ -29,12 +29,13 @@
     <properties>
         <servlet.api.version>3.1.0</servlet.api.version>
         <jstl.version>1.2</jstl.version>
-        <spring.version>4.1.3.RELEASE</spring.version>
+        <spring.version>4.1.5.RELEASE</spring.version>
         <slf4j.version>1.7.5</slf4j.version>
         <jackson.version>2.3.3</jackson.version>
         <junit.version>4.11</junit.version>
         <hibernate.version>5.1.1.Final</hibernate.version>
         <mysql.version>5.1.25</mysql.version>
+        <hibernate.validator.version>5.1.3.Final</hibernate.validator.version>
     </properties>
 
     <dependencies>
@@ -119,6 +120,13 @@
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
+        </dependency>
+
+        <!-- Validate -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>${hibernate.validator.version}</version>
         </dependency>
 
         <dependency>
