--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>spring-validator</module>
         <module>spring-ioc</module>
         <module>spring-mvc</module>
+        <module>spring-mobile</module>
     </modules>
     <packaging>pom</packaging>
 
