--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,9 @@
         <module>spring-ioc</module>
         <module>spring-mvc</module>
         <module>spring-mobile</module>
+        <module>spring-cache</module>
+        <module>spring-redis</module>
+        <module>spring-security-web</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -30,7 +33,7 @@
     <properties>
         <servlet.api.version>3.1.0</servlet.api.version>
         <jstl.version>1.2</jstl.version>
-        <spring.version>4.1.5.RELEASE</spring.version>
+        <spring.version>4.1.9.RELEASE</spring.version>
         <slf4j.version>1.7.5</slf4j.version>
         <jackson.version>2.3.3</jackson.version>
         <junit.version>4.11</junit.version>
